# hr_analytics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dash/: vacancies_dashboard.pbix
data/db_data/: dim_cities.csv  dim_employers.csv  dim_exp.csv  dim_format.csv  dim_grade.csv  dim_roles.csv  fact_table.csv
data/db_data/dimensions/: cities.xlsx  employers.xlsx  exp.xlsx  format.xlsx  grade.xlsx  roles.xlsx
data/db_data/fact_table/: fact_table.xlsx
data/processed/: processed.csv  processed.xlsx
data/raw/: cities.xlsx  ekb.xlsx  kazan.xlsx  moscow.xlsx  nsk.xlsx  spb.xlsx  vacancies.csv
notebooks/: EDA_and_plots.ipynb  processing.ipynb  visualization.ipynb
sql/: erd_creation_query.sql  erd_schema.pgerd
src/: db_data_prepare.py  extract.py  fact_table.py  load.py  parser.py  split_data.py  test_requests.py  transform.py
