[tool.poetry]
name = "hr_analytics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.0.2"
pandas = "2.2.2"
psycopg2 = "2.9.11"
tqdm = "4.67.1"
requests = "2.32.4"

[tool.poetry.group.dev.dependencies]
black = "25.9.0"
ruff = "0.14.1"
mypy = "1.18.2"
pre-commit = "4.3.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
